# DeBeer2dGame

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
resources/shaders/: sprite.frag
sandbox/: CMakeLists.txt  main.cpp
source/: Application.cpp  Application.h  CMakeLists.txt  CoreEvents.h  DeBeer2d.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp
source/events/: CMakeLists.txt  CoreEvents.h  Event.cpp  Event.h  EventClass.h  EventManager.cpp  EventManager.h  FamilyType.h  InputEvents.cpp  InputEvents.h
source/input/: CMakeLists.txt  InputManager.cpp  InputManager.h
source/logging/: CMakeLists.txt  Logger.cpp  Logger.h
source/rendering/: CMakeLists.txt  SpriteRenderer.cpp  SpriteRenderer.h
source/resource-management/: CMakeLists.txt  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
source/scene/: CMakeLists.txt  Components.h  Scene.cpp  Scene.h
tests/: CMakeLists.txt  EventSystem_test.cpp
